z-index to fix linkedin logo and github logo not clickable

--- a/Portfolio/root/assets/style.css
+++ b/Portfolio/root/assets/style.css
@@ -72,6 +72,7 @@
     margin-top: 5%;
     border: 1px outset #231b12;
     position: relative;
+    z-index: 1;
   }
 
   .background-image {
